# Copyright © Jeron Lau 2017 - 2019.
# Dual-licensed under either the MIT License or the Boost Software License, Version 1.0.
# (See accompanying file LICENSE_1_0.txt or copy at https://www.boost.org/LICENSE_1_0.txt)

# XXXX  X                    /5\——————/5\       XXXX      X           X
# X   X X   XXX   XXXX      |   0    0   |     X      XXX   XXXX XXXX X X   X
# X   X X  X   X  X   X  /"\|     <>     |/"\  X      X   X    X    X X X   X
# XXXX  X  X   X  X   X  \  \\_  ====  _//  /  X   XX X   X   X    X  X  X X
# X     X  X   X  XXXX    \_              _/   X    X X   X  X    X   X   X
# X     X   XXX   X       / \            / \    XXXX  X   X XXXX XXXX X   X
#                 X       \                /                            XX
#                          --____________--

[package]
name = "whome"
version = "0.1.1"
authors = ["Jeron Aldaron Lau <jeronaldaron@gmail.com>"]
edition = "2018"

license = "MIT / BSL-1.0"
readme = "README.md"
description = "A command line program for detecting the current user's name and environment.  A rust replacement for `whoami` and `hostname` with added features."
homepage = "https://free.plopgrizzly.com/whome"
documentation = "https://free.plopgrizzly.com/whome"
repository = "https://github.com/plopgrizzly/whome"
keywords = ["user", "username", "whoami", "platform", "detect"]
categories = ["os", "command-line-utilities"]

[dependencies]
term = "0.5"
whoami = "0.4"
