# Who Me?
# Copyright © 2017-2024 Jeron Aldaron Lau.
#
# Licensed under any of:
#  - Apache License, Version 2.0 (https://www.apache.org/licenses/LICENSE-2.0)
#  - MIT License (https://mit-license.org/)
#  - Boost Software License, Version 1.0 (https://www.boost.org/LICENSE_1_0.txt)
# At your choosing (See accompanying files LICENSE_APACHE_2_0.txt,
# LICENSE_MIT.txt and LICENSE_BOOST_1_0.txt).

[package]
name = "whome"
version = "0.6.0"
edition = "2021"
license = "Apache-2.0 OR MIT OR BSL-1.0"
documentation = "https://docs.rs/whome"
homepage = "https://github.com/AldaronLau/whome/blob/main/CHANGELOG.md"
repository = "https://github.com/AldaronLau/whome"
readme = "README.md"
description = """
A command line program for detecting the current user's name and environment. A
rust replacement for `whoami` and `hostname` with added features.
"""
keywords = ["user", "username", "whoami", "platform", "detect"]
categories = ["os::freebsd-apis", "command-line-utilities", "os::linux-apis", "os::macos-apis", "os::windows-apis"]

[dependencies.term]
version = "0.7"

[dependencies.whoami]
version = "1.5.0"
#git = "https://github.com/ardaku/whoami"
#branch = "more-whoami-1.5.0-patches"
